--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>HTML Images</title>
 </head>
 <body>
-
-  <!-- Your code here -->
-
+  <img src="https://pyxis.nymag.com/v1/imgs/8c9/f48/5bae11f080afbda51f9ce45924640028a0-tim-heidecker.2x.rsocial.w600.jpg">
+  <img src="https://media.cdn.adultswim.com/uploads/20200303/thumbnails/2_20331154179-decker_220.jpg" alt="Tim Heidecker as Decker">
+  <img src="https://i.redd.it/e0uhz0s2srq21.png" alt="Tim Heidecker in court" title="Tim Heidecker in court">
 </body>
 </html>
